<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pebble Messenger Pro</string>
    <string name="action_settings">Reset To Default</string>
    <string name="accessibility_description">This allows Pebble Messenger to forward notifications to your pebble!</string>
    <string name="notif_started_loading">Creating Unicode character database…</string>
    <string name="notif_finished_loading">Finished loading font database! Tap to dismiss₀</string>
    <string name="error_fontbase_notready">There is a message coming, but the font database is not ready. Please wait a while! If the error take long times, please rebuild the font data base at the setting view in Pebble Messenger.</string>
    <string name="notificationservice_unknownperson">Unknown Person</string>
    <string name="notificationservice_privateNumber">Private Number</string>
    <string name="messagedbhandler_message_no_more_keep">The Message is no more kept in Pebble Messenger. Please check it by phone.</string>
    <string name="pref_cat_notif">Notification Options</string>
    <string name="pref_cat_notif_summ">The function of displaying the notifications on your Pebble.</string>
    <string name="pref_sms_enable">Send the new SMS to pebble</string>
    <string name="pref_sms_enable_summ">Check to enable send the content of the SMS to pebble, this function need query your sms database.</string>
    <string name="pref_notif_screen_on">Notify when screen is on</string>
    <string name="pref_notif_screen_on_summ">When checked, notifications will be sent to the pebble even if the phone\'s screen is on.</string>
    <string name="pref_notif_message_scale">Font size on Pebble</string>
    <string name="pref_notif_message_scale_summ">The font is more large, the chars which were displayed on the Pebble screen is more few.</string>
    <string name="pref_notif_readmessage">Open Text to Speech</string>
    <string name="pref_notif_readmessage_summ">Click middle button of Pebble to convert the current message to voice.</string>
    <string name="pref_notif_setuptts">Setup Text to Speech Engine</string>
    <string name="pref_notif_setuptts_summ">Go to system settings to choice speech engine of your language.</string>
    <string name="pref_package_list">Watch List</string>
    <string name="pref_package_list_summ">Select the applications that you want to send notifications to your Pebble</string>
    <string name="pref_dnd_time_enabled">Quiet time</string>
    <string name="pref_dnd_time_enabled_summ">When checked, will turn off notifications to your Pebble from Pebble Messenger during the times specified below.</string>
    <string name="pref_dnd_time_before_summ">No notifications before this time</string>
    <string name="pref_dnd_time_before">Quiet time - Not before</string>
    <string name="pref_dnd_time_after_summ">No notifications after this time</string>
    <string name="pref_dnd_time_after">Quiet time - Not after</string>
    <string name="pref_notif_timeout">Notification Timeout</string>

    <string-array name="pref_notif_timeout">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
    </string-array>
    <string-array name="pref_notif_timeout_values">
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
    </string-array>
    <string-array name="pref_notif_font_size">
        <item>Normal (16 chars* 9 lines)</item>
        <item>Middle (12 chars* 6 lines)</item>
        <item>Large  (9 chars* 4 lines)</item>
    </string-array>
    <string-array name="pref_notif_font_size_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_cat_call">Call Options</string>
    <string name="pref_cat_call_summ">Send incoming call notification, and remote control your phone to answer or reject the call.</string>
    <string name="pref_call_enable">Send incoming call notification</string>
    <string name="pref_call_quiet">Use the same Quiet Setting as Pebble-Messenger</string>
    <string name="pref_call_quiet_summ">If you have set the quiet options above, and want the call messenger keep quiet in same time, check it.</string>
    <string name="pref_call_sms_short">SMS text content for short press</string>
    <string name="pref_call_sms_short_summ">When receiving an incoming call, press the middle button on the Pebble to send a preset text message to the caller and reject the call.</string>
    <string name="pref_call_sms_long">SMS text content for long press</string>
    <string name="pref_call_sms_long_summ">Same as above, but using a second, different preset message.  Activate by pressing and holding the Pebble\'s middle button for a half second.</string>
    <string name="pref_call_sms_short_default">Sorry! I am busy and call you later.</string>
    <string name="pref_call_sms_long_default">Sorry! I am in a meeting, Send me message or waiting for my call back.</string>
    <string name="pref_black_background">Set black background style</string>
    <string name="pref_black_background_summ">Check for black background and white chars on Pebble\'s screen.</string>
    <string name="pref_cat_general">General Setup</string>
    <string name="pref_cat_general_summ">Main setup function</string>
    <string name="pref_general_accessibility">Enable the authority of reading notifications.</string>
    <string name="pref_general_accessibility_summ">Pebble will not received notifications until you open the authority.</string>
    <string name="pref_general_pebbleapp">Install PebbleMsgPro on watch.</string>
    <string name="pref_general_pebbleapp_summ">Install a cooperative app on your watch.</string>
    <string name="title_setting_activity">Options</string>
    <string name="title_tools_activity">Tools</string>
    <string name="title_about_activity">About</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="setup_hello">Welcome to Pebble Messenger Pro test page!\nPlease select test function from option buttons.\n</string>
    <string name="setup_basic_test">Basic Test</string>
    <string name="setup_app_test">Pebble App Test</string>
    <string name="setup_tts_test">TTS Engine Test</string>
    <string name="setup_run_all">Run All Test</string>
    <string name="setup_send_to_author">Email to Author</string>

    <string name="setup_test_pebble_title">1. Check your Pebble status\t</string>
    <string name="setup_test_pebble_firmware">2. Check your Pebble firmware version\t</string>
    <string name="setup_accessibility_service_title">3. The new version does not need accessibility service, but need the authority to read notifications.\t</string>
    <string name="setup_install_pebble_app">6. Check PebbleMsgPro status\t</string>
    <string name="setup_watch_list">4. Check Watch List\t</string>
    <string name="setup_font_base_status">5. Font data base status\t</string>
    <string name="setup_tts_engine">7. The system speech engine\t</string>
    <string name="setup_tts_default_locale">Language:</string>
    <string name="setup_tts_failed">The speech engine is failed, your pebble will not read the notification</string>

    <string name="setup_check_ok">OK</string>
    <string name="setup_check_empty">Empty</string>
    <string name="setup_check_bad">Bad</string>
    <string name="setup_check_closed">Closed</string>
    <string name="setup_check_opened">Opened</string>
    <string name="setup_check_uncheck">UnCheck</string>
    <string name="setup_check_result_need_update">The Version is lower than demand, please go to Pebble App and update</string>
    <string name="setup_check_disconnected">Disconnected</string>
    <string name="setup_check_connected">Connected</string>
    <string name="setup_watch_list_warning">Please go to [Setting->Watch List] to add app</string>
    <string name="setup_button_goto_setting">Setting->Accessibility</string>
    <string name="setup_button_check_pebble_app">Check PebbleMsgPro on Pebble</string>
    <string name="setup_button_goto_pebble">Install/update PebbleMsgPro on Pebble</string>
    <string name="setup_button_goto_speech_setting">Test Text-to-speech Engine</string>

    <string name="setup_report_subject">My Pebble Messenger Pro Test Report</string>
    <string name="setup_send_mail">Sending mail...</string>


    <string name="tools_button_rebuild_font">Rebuild Font Database</string>
    <string name="tools_button_clean_cache">Clean Notifications History</string>
    <string name="tools_button_send_message">Send a Message to Pebble</string>
    <string name="tools_button_send_call">Send a call to Pebble</string>
    <string name="tools_button_restart_service">Restart Pebble Messenger</string>

    <string name="tools_toast_rebuild_font">Begin to rebuild</string>
    <string name="tools_toast_clean_cache">Finished cleaning the history</string>
    <string name="tools_toast_send_message">The message is sent to Pebble</string>
    <string name="tools_toast_send_call">The call is sent to Pebble</string>
    <string name="tools_toast_restart_service">The services are restarting.</string>

    <string name="dialog_send_message_hint">Input message to your pebble</string>
    <string name="dialog_send_call_name_hint">Name of incoming call</string>
    <string name="dialog_send_call_number_hint">Number of incoming call</string>
    <string name="dialog_button_send">Send</string>
    <string name="dialog_button_cancel">Cancel</string>

    <string name="test_message_content">I more like my Pebble than rolex.</string>
    <string name="test_call_number">65432187</string>
    <string name="test_call_name">Rolex</string>

    <string name="seek_null_message">The message you want is no longer exist.</string>
    <string name="about_text">"Author: Yang Tsao\nDevelop IDE: Android Studio\nMin SDK Version: 4.4.2\nPebble firmware Version: 2.7\nThanks: My wife Meiying Song and My son Gaoge Tsao\n\tTiago R. Espinha, Dattas Moonchaser\nLast: I hope you enjoy this app, if there are any regret about buying, please send me your bill number, I'l refund the money any time.I'm so glad if you feedback some advice. If you like my app, please rating it on google play.\nHelp site: http://yangtsao.wordpress.com\nEmail: yunshansimon@gmail.com"
    "\nThanks to Jarrod Kailef for English correction."
    </string>
    <string name="title_setup_activity">Evenment Test</string>
</resources>
