<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/callnumber"
        android:text="@string/test_call_number"
        android:hint="@string/dialog_send_call_number_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/dialog_send_call_name_hint"
        android:text="@string/test_call_name"
        android:ems="10"
        android:id="@+id/callname" />
</LinearLayout>
