<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toolsfragment"
    tools:context="yangtsao.pebblemessengerpro.activities.ToolsFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tools_button_rebuild_font"
            android:id="@+id/button_rebuild_font" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tools_button_clean_cache"
            android:id="@+id/button_clean_message_cache" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tools_button_send_message"
            android:id="@+id/button_test_message" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tools_button_send_call"
            android:id="@+id/button_test_call" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tools_button_restart_service"
            android:id="@+id/button_restart_service" />
    </LinearLayout>
</FrameLayout>
